# TabIt

./: .env.example  .gitignore  AGENTS.md  Analysis.java  CONTEXT.md  Capture.java  Functions.java  Klapuri.java  PolyphonicPitchDetection.java  README.md  pyproject.toml  tabit.db
.claude/: settings.json
.claude/agents/: tabit-reviewer.md  tabit-test-reviewer.md
.claude/skills/tabit-context-docs/: SKILL.md
.claude/skills/tabit-test-review/: SKILL.md
.github/workflows/: context-docs.yml
Analysis/: Analysis.java  FFT.java  Functions.java  Klapuri.java
BST/: BST.java  BTNode.java
Capture/: Capture.java
DrawImage/: DrawImage.java
app/: chart_seed.py  chart_store.py  config.py  db.py  deps.py  guest.py  jobs.py  main.py  migrations.py  models.py  music_theory.py  schemas.py  security.py  storage.py
app/audio/: analyzer.py  beatgrid.py  chord_eval.py  chordino.py  decode.py  decoding.py  deep_chord.py  device.py  key_estimation.py  labels.py  recognizer.py  segments.py  separation.py
app/routers/: auth.py  charts.py  recordings.py
docs/: INITIAL-REVIEW.md  TODO.md  multi-instrument-roadmap.md  phase-0-findings.md  phase-4-audit.md  technical-plan-phase-0-1.md
docs/superpowers/plans/: 2026-06-17-tabit-backend-foundation.md  2026-06-24-tabit-analysis-pipeline.md  2026-06-24-tabit-react-frontend.md  2026-06-29-beat-native-chart.md  2026-06-29-smooth-playback-bar.md  2026-06-30-beat-redistribute.md  2026-06-30-library-search-reanalyze.md  2026-07-13-redesign-phase-1-foundation.md  2026-07-14-redesign-phase-2-chart-page.md  2026-07-14-redesign-phase-3-mode-expression.md  2026-07-14-redesign-phase-4-audit-and-close.md  2026-07-17-bar-native-chord-sheet.md
docs/superpowers/specs/: 2026-06-17-tabit-design.md  2026-06-29-beat-native-chart-design.md  2026-06-29-chord-engine-tier1-design.md  2026-06-29-smooth-playback-bar-design.md  2026-06-30-beat-redistribute-design.md  2026-06-30-library-search-reanalyze-design.md  2026-07-13-visual-redesign-design.md  2026-07-17-bar-native-chord-sheet-design.md  2026-07-17-test-suite-review-skill-design.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts  music.ts  types.ts
frontend/src/auth/: AuthContext.test.tsx  AuthContext.tsx
frontend/src/chart/: AnalyzingIndicator.test.tsx  AnalyzingIndicator.tsx  ChartContextBar.test.tsx  ChartContextBar.tsx  ChartSheet.tsx  ControlDeck.responsive.test.tsx  ControlDeck.test.tsx  ControlDeck.tsx  KeyControl.test.tsx  KeyControl.tsx  PlaybackContext.test.tsx  PlaybackContext.tsx  ScrubBar.test.tsx  ScrubBar.tsx  SegmentEditor.test.tsx  SegmentEditor.tsx  TempoControl.test.tsx  TempoControl.tsx  TimeSignatureControl.test.tsx  TimeSignatureControl.tsx  Timeline.test.tsx  Timeline.tsx  TransposeControl.test.tsx  TransposeControl.tsx  WhereAmI.test.tsx  WhereAmI.tsx  barLayout.test.ts  barLayout.ts  beatGrid.test.ts  beatGrid.ts  beatMath.test.ts  beatMath.ts  chartBarsBorders.test.ts  chartLayout.test.ts  chartLayout.ts  chordProgress.test.ts  chordProgress.ts  musicalPosition.test.ts  musicalPosition.ts  timeMath.test.ts  (+8 more)
frontend/src/components/: AnalysisStatusBadge.test.tsx  AnalysisStatusBadge.tsx  Header.test.tsx  Header.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  SkipLink.test.tsx  SkipLink.tsx  Spinner.test.tsx  Spinner.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
frontend/src/guest/: useGuestSong.ts
frontend/src/pages/: ChartEditorPage.edit.test.tsx  ChartEditorPage.practice.test.tsx  ChartEditorPage.test.tsx  ChartEditorPage.tsx  GuestHomePage.test.tsx  GuestHomePage.tsx  HomePage.tsx  LibraryPage.test.tsx  LibraryPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RegisterPage.test.tsx  RegisterPage.tsx
frontend/src/practice/: ChordGuess.test.tsx  ChordGuess.tsx  ModeChoice.test.tsx  ModeChoice.tsx  answer.test.ts  (+4 more)
scripts/: bootstrap_labels.py  eval_chords.py  make_eval_stems.py  migrate_beats.py  separation_spike.py  setup-worktree.sh  validate_labels.py
tabit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_analyzer.py  test_auth.py  test_beatgrid.py  test_chart_seed.py  test_charts.py  test_chord_eval.py  test_chordino.py  test_chordino_analyzer.py  test_decode.py  test_decoding.py  test_deep_chord.py  test_deps.py  test_device.py  test_engine_selection.py  test_guest.py  test_health.py  test_jobs.py  test_key_estimation.py  test_labels.py  test_legacy_schema_migration.py  test_models.py  test_music_theory.py  test_recognizer.py  test_recordings.py  test_schemas.py  test_security.py  test_segments.py  test_separation.py
tests/eval/: .gitignore  A backing.lab  A funk.lab  D backing.lab  E blues.lab  F backing.lab  I II III II I.lab  I V IV I.lab  README.md  Time backing.lab  Time.lab  Waltz.lab
ui/: PolyphonicPitchDetection.java
(+23 files in other folders)
