[project]
name = "tabit"
version = "0.1.0"
description = "Turn practice voice memos into editable chord charts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "librosa>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "soundfile>=0.12",
]
# Tier 2 chord engine. Needs the native nnls-chroma Vamp plugin installed separately
# (https://www.vamp-plugins.org/pack.html) and TABIT_ANALYSIS_ENGINE=chordino.
# Install with: pip install --no-build-isolation -e ".[chordino]"
chordino = [
    "vamp>=1.1",
]
# ML stack for source separation (Demucs) + the deep chord model + eval scoring
# (Phase 0/1). Heavy (torch); deliberately kept out of the base install so the app
# still installs and runs without it — heavy imports are lazy throughout. The
# inference box pins Python to a version with cu128 torch + Demucs wheels (≈3.12);
# see docs/technical-plan-phase-0-1.md. Install with: pip install -e ".[ml]"
ml = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "demucs>=4.0",
    "mir_eval>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
