[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tabit"
version = "0.1.0"
description = "Turn practice voice memos into editable chord charts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "librosa>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "soundfile>=0.12",
]
# Tier 2 chord engine. Needs the native nnls-chroma Vamp plugin installed separately
# (https://www.vamp-plugins.org/pack.html) and TABIT_ANALYSIS_ENGINE=chordino.
# Install with: pip install --no-build-isolation -e ".[chordino]"
chordino = [
    "vamp>=1.1",
]

# Only `app` is a distributable Python package. Declare it explicitly so
# setuptools' flat-layout auto-discovery doesn't trip over sibling dirs
# (storage/, frontend/, node_modules/) and refuse to build.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
