[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tabit"
version = "0.1.0"
description = "Turn practice voice memos into editable chord charts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "librosa>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "soundfile>=0.12",
]
# Tier 2 chord engine. Needs the native nnls-chroma Vamp plugin installed separately
# (https://www.vamp-plugins.org/pack.html) and TABIT_ANALYSIS_ENGINE=chordino.
# Install with: pip install --no-build-isolation -e ".[chordino]"
chordino = [
    "vamp>=1.1",
]
# ML stack for source separation (Demucs) + the deep chord model + eval scoring
# (Phase 0/1). Heavy (torch); deliberately kept out of the base install so the app
# still installs and runs without it — heavy imports are lazy throughout.
# torch/torchaudio are NOT on PyPI for the Blackwell CUDA build — install them from the
# PyTorch index first, then this extra. Verified working stack on the 5070 Ti inference
# box (Blackwell / sm_120):
#   pip install --index-url https://download.pytorch.org/whl/cu130 \
#       "torch==2.11.0" "torchaudio==2.11.0"   # matched pair; 2.12 has no torchaudio yet
#   pip install -e ".[ml]"                     # demucs + mir_eval + soundfile from PyPI
# Python 3.14 works (cp314 cu130 wheels ship); the plan's ≈3.12 note was conservative.
# NB: the published demucs 4.0.x wheel lacks demucs.api — separation.py uses the stable
# pretrained/apply API instead. See docs/technical-plan-phase-0-1.md.
ml = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "demucs>=4.0",
    "mir_eval>=0.7",
    # Stem writing goes through libsndfile, not torchaudio.save (which needs the optional
    # torchcodec package as of torchaudio 2.11). libsndfile handles FLAC natively.
    "soundfile>=0.12",
]

# Only `app` is an importable Python package; `storage` (blob data) and `frontend`
# (TypeScript) sit at the repo root and must be excluded from flat-layout discovery.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
